--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,9 +21,9 @@ SET(PROJECT_SOURCES
     common_lib/i2c_dma.c
 
     device_lib/rda5807.c
-    device_lib/rda5807_tea.c
     device_lib/hd44780-i2c.c
     device_lib/ir.c
+    device_lib/at24c64.c
 
     stdio/printf.c
     stdio/syscalls.c
@@ -36,5 +36,5 @@ SET(STM32_LINKER_SCRIPT ${CMSIS_LINKER_SCRIPT})
 ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES} ${CMSIS_STARTUP_SOURCE} ${CMSIS_SOURCES} ${StdPeriphLib_SOURCES})
 
 STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
-#STM32_SET_HSE_VALUE(${CMAKE_PROJECT_NAME} 12000000)
+STM32_SET_HSE_VALUE(${CMAKE_PROJECT_NAME} 8000000)
 STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
